--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.application.name=demo
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
-spring.datasource.url=jbcd:mysql://localhost:3036/real_estate?createDatabaseIfNotExists=true
+spring.datasource.url=jbcd:mysql://localhost:3306/real_estate?createDatabaseIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 
