--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
-spring.datasource.url=jbcd:mysql://localhost:3306/real_estate?createDatabaseIfNotExists=true
+spring.datasource.url=jbcd:mysql://localhost:3306/university?createDatabaseIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
