--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 	</properties>
 	<dependencies>
         <dependency>
+		
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -63,6 +64,12 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
+		
+		</dependency>
+		<dependency>
+		<groupId>jakarta.validation</groupId>
+		<artifactId>jakarta.validation-api</artifactId>
+		<version>3.0.2</version>
 		</dependency>
     </dependencies>
 
