--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
     
 </dependency>
 
+
+
+
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
+</dependency>
+
+
 		
 
 
