--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
         <scope>test</scope>
     </dependency>
 	<!-- Mockito -->
+	<!-- Swagger / OpenAPI -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.5.0</version>
+</dependency>
+
 
 
 		
